# ReeOS-uefi-version-

./: Cargo.toml  README.md  run.sh
esp/efi/boot/: bootx64.efi
src/: build.sh  main.rs
