[package]
name = "reeos-uefi"
version = "0.1.0"
edition = "2024"

[dependencies]
linked_list_allocator = "0.10"


uefi = { version = "0.28", features = ["alloc"] }

log = "0.4"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
